--- a/style.css
+++ b/style.css
@@ -6,7 +6,25 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #eee;
 }
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+
+
+/* Navbar ********************************* */
 
 .navbar {
   width: 100%;
@@ -31,12 +49,7 @@ body {
   display: flex;
 }
 
-.navbar-links li {
-  list-style: none;
-}
-
 .navbar-links li a {
-  text-decoration: none;
   color: white;
   padding: 1rem;
   display: block;
@@ -100,6 +113,8 @@ body {
 
 }
 
+/* home page ***************************************** */
+
 #home-background {
   height: 100vh;
   background-image: linear-gradient(
@@ -155,3 +170,53 @@ body {
     margin-top: 120px;
   }
 }
+
+/* curriculum page *************************************** */
+
+
+.main-content {
+  display: grid;
+  flex-direction: column;
+  grid-gap: 20px;
+  margin: 83px 20px 20px 20px;
+}
+
+.box {
+  background-color: #bbb;
+  padding: 20px;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5), 6px 6px 20px rgba(0, 0, 0, 0.2);
+}
+
+.image {
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5), 6px 6px 20px rgba(0, 0, 0, 0.2);
+}
+
+.intro {
+  display: grid;
+  grid-gap: 20px;
+}
+
+.front-end,.back-end,.dev-ops {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+footer {
+  background-color: #318724;
+  height: 63px;
+  width: 100%;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+}
+
+footer a {
+  color: white;
+}
+
+
